--- a/views/man_woman.html
+++ b/views/man_woman.html
@@ -70,31 +70,59 @@
         <div class="column-center">
             <%if(products.length>=1){%>
                 <div class="center mb-4">
-                    <%products.forEach((product) =>{%>
-                        <a href="<%=product.affiliate_link%>" title="<%=product.title%>" class="link_product width-13 height-21 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n">
-                            <div class="center">
-                                <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
-                            </div>
-                            <div class="product_title text-muted fs-075 ellipsis-2 mb-3 px-2">
-                                <%=product.title%>
-                            </div>
-                            <h5 class="center">
-                                <%if(product.price>0){%>
-                                    <%if(gender == 'men'){%>
-                                        <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black"><%=product.price%> $</span>
+                    <%if(category=='clothing'){%>
+                        <%products.forEach((product) =>{%>
+                            <a href="<%=product.affiliate_link%>" title="<%=product.title%>" class="link_product width-13 height-21 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n">
+                                <div class="center">
+                                    <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
+                                </div>
+                                <div class="product_title text-muted fs-075 ellipsis-2 mb-3 px-2">
+                                    <%=product.title%>
+                                </div>
+                                <h5 class="center">
+                                    <%if(product.price>0){%>
+                                        <%if(gender == 'men'){%>
+                                            <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black"><%=product.price%> $</span>
+                                        <%}else{%>
+                                            <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-orange-woman"><%=product.price%> $</span>
+                                        <%}%>
                                     <%}else{%>
-                                        <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-orange-woman"><%=product.price%> $</span>
+                                        <%if(gender == 'men'){%>
+                                            <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black">price depending size</span>
+                                        <%}else{%>
+                                            <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-orange-woman">price depending size</span>
+                                        <%}%>
                                     <%}%>
-                                <%}else{%>
-                                    <%if(gender == 'men'){%>
-                                        <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black">price depending size</span>
+                                </h5>
+                            </a>
+                        <%})%>
+                    <%}else{%>
+                        <%products.forEach((product) =>{%>
+                            <a href="<%=product.affiliate_link%>" title="<%=product.title%>" class="link_product width-14 height-17 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n">
+                                <div class="center">
+                                    <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-9 mb-2" style="max-width: 100% !important;">
+                                </div>
+                                <div class="product_title text-muted fs-075 ellipsis-2 mb-3 px-2">
+                                    <%=product.title%>
+                                </div>
+                                <h5 class="center">
+                                    <%if(product.price>0){%>
+                                        <%if(gender == 'men'){%>
+                                            <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black"><%=product.price%> $</span>
+                                        <%}else{%>
+                                            <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-orange-woman"><%=product.price%> $</span>
+                                        <%}%>
                                     <%}else{%>
-                                        <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-orange-woman">price depending size</span>
+                                        <%if(gender == 'men'){%>
+                                            <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black">price depending size</span>
+                                        <%}else{%>
+                                            <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-orange-woman">price depending size</span>
+                                        <%}%>
                                     <%}%>
-                                <%}%>
-                            </h5>
-                        </a>
-                    <%})%>
+                                </h5>
+                            </a>
+                        <%})%>
+                    <%}%>
                 </div>
             <%}else{%>
                 <div class="center text-muted f-w-b fs-1 mt-5">
