--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -45,14 +45,7 @@
                 <h6 class="text-shadow-1 fs-095">Remplir les details de vente</h6>
             </div>
 
-            <form action="/espace-admin/ajouter-produit" method="post" enctype="multipart/form-data">
-                <div class="column-center mb-4">
-                    <button type="button" class="rounded bx-s-6 bg-success width-3 height-3 text-white mb-2" id="button_img">
-                        <i class="fas fa-camera"></i>
-                    </button>
-                    <p class="text-muted fs-09" id="text_imgs_select">Cliquez sur ce bouton choisir les photos</p>
-                    <input type="file" name="files" id="input_file" class="d-none" multiple required>
-                </div>
+            <form action="/espace-admin/ajouter-produit" method="post">
                 <div>
                     <div class="wrap-center">
                         <div class="m-2">
@@ -77,7 +70,10 @@
                             </div>
 
                             <div class="text-muted fs-075 ml-3">partenaire</div>
-                            <input type="text" name="partenaire" class="width-20 height-input form-control fs-075 p-1 mb-2" required>
+                            <input type="text" name="partenaire" class="width-20 height-input form-control fs-075 p-1 mb-3" required>
+
+                            <div class="text-muted fs-075 ml-3">Url image <span class="text-danger f-w-b">*</span></div>
+                            <input type="url" name="url_img" class="width-20 height-input form-control fs-075 p-1 mb-3" required>
                         </div>
     
                         <div class="m-2">
@@ -88,7 +84,7 @@
                             <input type="number" step="0.01" name="price" min="0" class="width-20 height-input form-control fs-075 p-1 mb-3">
 
                             <div class="text-muted fs-075 ml-3">affiliate link <span class="text-danger f-w-b">*</span></div>
-                            <input type="url" name="affiliate_link" class="width-20 height-input form-control fs-075 p-1 mb-3">
+                            <input type="url" name="affiliate_link" class="width-20 height-input form-control fs-075 p-1 mb-3" required>
                         </div>    
                     </div>
 
