--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -114,8 +114,11 @@
         <select name="type" id="tvh" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3" required>
             <option value="" class="text-center">clothing type</option>
             <option value="tanks" class="text-center">tanks</option>
+            <option value="shorts" class="text-center">shorts</option>
+            <option value="pants" class="text-center">pants</option>
+            <option value="jeans" class="text-center">jeans</option>
+            <option value="joggers" class="text-center">joggers</option>
             <option value="swimsuits-panties" class="text-center">swimsuits/panties</option>
-            <option value="pants-jeans-joggers" class="text-center">pants/jeans/joggers</option>
             <option value="t-shirts-polos-lacoste" class="text-center">t-shirts/polos/lacoste</option>
             <option value="sweaters-cardigans-coats-jackets" class="text-center">sweaters/cardigans/coats/jackets</option>
             <option value="boxers-briefs" class="text-center">boxers/briefs</option>
@@ -136,9 +139,11 @@
             <option value="" class="text-center">clothing type</option>
             <option value="veil" class="text-center">veil</option>
             <option value="tank-top" class="text-center">tank top</option>
+            <option value="pants" class="text-center">pants</option>
+            <option value="jeans" class="text-center">jeans</option>
+            <option value="joggers" class="text-center">joggers</option>
             <option value="skirt-dress" class="text-center">skirt/dress</option>
             <option value="swimsuit-panties" class="text-center">swimsuit/panties</option>
-            <option value="pants-jeans-joggers" class="text-center">pants/jeans/joggers</option>
             <option value="t-shirts-polos-lacoste" class="text-center">t-shirts/polos/lacoste</option>
             <option value="sweaters-cardigans-coats-jackets" class="text-center">sweaters/cardigans/coats/jackets</option>
             <option value="jumpsuits-rompers-overalls" class="text-center">jumpsuits/rompers/overalls</option>
