--- a/views/details_produit.html
+++ b/views/details_produit.html
@@ -90,9 +90,8 @@
                     <%=product.description%>
                 </p>
                 <div class="column-center"> 
-                    <p class="fs-085 f-w-b text-muted">
-                        Hi how are you, we noticed your location in the United States in the California region and 
-                        our Amazon store is closer to you. If you want to buy this product, we will do it in this store for fast delivery with less costs. Thanks you!
+                    <p class="fs-085 f-w-b text-muted" cc="<%=countryCode%>" id="tn">
+                        
                     </p>
                     <a href="<%=product.affiliate_link%>" title="<%=product.title%>">
                         <button class="br-06 out-n w-100 border-0 p-3 bg-greened text-white mw-90 f-w-b bx-s-10 fs-14">
