--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -113,16 +113,17 @@
     <section class="d-none">
         <select name="type" id="tvh" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3" required>
             <option value="" class="text-center">clothing type</option>
+            <option value="suit" class="text-center">suit</option>
+            <option value="shirt" class="text-center">shirt</option>
             <option value="tanks" class="text-center">tanks</option>
             <option value="shorts" class="text-center">shorts</option>
             <option value="pants" class="text-center">pants</option>
             <option value="jeans" class="text-center">jeans</option>
             <option value="joggers" class="text-center">joggers</option>
-            <option value="swimsuits-panties" class="text-center">swimsuits/panties</option>
+            <option value="sock-hosiery" class="text-center">sock/hosiery</option>
+            <option value="boxers-briefs" class="text-center">boxers/briefs</option>
             <option value="t-shirts-polos-lacoste" class="text-center">t-shirts/polos/lacoste</option>
             <option value="sweaters-cardigans-coats-jackets" class="text-center">sweaters/cardigans/coats/jackets</option>
-            <option value="boxers-briefs" class="text-center">boxers/briefs</option>
-            <option value="shirt-suit" class="text-center">shirt/suit</option>
             <option value="jallaba-sabador-tunic-bazin-fabric" class="text-center">jallaba/sabador/tunic/fabric/bazin</option>
             <option value="others" class="text-center">others</option>            
         </select>
@@ -137,18 +138,23 @@
         </select>
         <select name="type" id="tvf" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3" required>
             <option value="" class="text-center">clothing type</option>
+            <option value="bra" class="text-center">bra</option>
             <option value="veil" class="text-center">veil</option>
-            <option value="tank-top" class="text-center">tank top</option>
+            <option value="suit" class="text-center">suit</option>
+            <option value="shirt" class="text-center">shirt</option>
             <option value="pants" class="text-center">pants</option>
             <option value="jeans" class="text-center">jeans</option>
+            <option value="tights" class="text-center">tights</option>
+            <option value="shorts" class="text-center">shorts</option>
+            <option value="pajamas" class="text-center">pajamas</option>
             <option value="joggers" class="text-center">joggers</option>
+            <option value="leggings" class="text-center">leggings</option>
             <option value="skirt-dress" class="text-center">skirt/dress</option>
+            <option value="sock-hosiery" class="text-center">sock/hosiery</option>
             <option value="swimsuit-panties" class="text-center">swimsuit/panties</option>
             <option value="t-shirts-polos-lacoste" class="text-center">t-shirts/polos/lacoste</option>
             <option value="sweaters-cardigans-coats-jackets" class="text-center">sweaters/cardigans/coats/jackets</option>
             <option value="jumpsuits-rompers-overalls" class="text-center">jumpsuits/rompers/overalls</option>
-            <option value="boxers-briefs-bra" class="text-center">boxers/briefs/bra</option>
-            <option value="shirt-suit" class="text-center">shirt/suit</option>
             <option value="abaya-jallaba-fabric-bazin" class="text-center">abaya/jallaba/fabric/bazin</option>
             <option value="others" class="text-center">others</option>            
         </select>
@@ -185,7 +191,6 @@
             <option value="boy" class="text-center">Boy's</option>
             <option value="girl" class="text-center">Girl's</option>
         </select>
-
     </section>
 </body>
 </html>
