--- a/views/baby.html
+++ b/views/baby.html
@@ -12,7 +12,7 @@
     <script defer src="/my-js/URLQueryString.js"></script>
 
     <!-- my-js -->
-    <script defer src="/my-js/enfant_bebe.js"></script>
+    <script defer src="/my-js/baby.js"></script>
 
     <!-- boostrap css -->
     <link rel="stylesheet" href="/bootstrap-css-4.5.0/bootstrap.min.css">
@@ -23,11 +23,8 @@
     <!-- my-templates-css -->
     <link rel="stylesheet" href="/my-templates-css/globalCss.css">
 
-    <!-- my-css -->
-    <link rel="stylesheet" href="/my-css/enfant_bebe.css">
-
     <!-- media-querie -->
-    <link rel="stylesheet" href="/media-querie/mq_enfant_bebe.css">
+    <link rel="stylesheet" href="/media-querie/mq_baby.css">
 </head>
 <body>
     
@@ -47,12 +44,12 @@
     <section class="mb-5">
         <div class="d-flex justify-content-end mb-2">
             <div class="wrap justify-content-end mx-2 mr-lg-5">
-                <select name="categorie" id="sc" class="mr-2 width-8 text-center f-w-b br-06 fs-075 cs-p text-muted mb-2" style="height: 1.5rem; border: 2.5px solid black;">
+                <!-- <select name="categorie" id="sc" class="mr-2 width-8 text-center f-w-b br-06 fs-075 cs-p text-muted mb-2" style="height: 1.5rem; border: 2.5px solid black;">
                     <option value="" class="text-center">Category</option>
                     <option value="clothing" class="text-center">Clothing</option>
                     <option value="shoes" class="text-center">Shoes</option>
                     <option value="accessories" class="text-center">Accessories</option>
-                </select>
+                </select> -->
                 <select name="sex" id="ss" class="mr-2 width-8 text-center f-w-b br-06 fs-075 cs-p text-muted mb-2" style="height: 1.5rem; border: 2.5px solid black;">
                     <option value="" class="text-center">Sex</option>
                     <option value="boy" class="text-center">Boy's</option>
