--- a/views/navigation.html
+++ b/views/navigation.html
@@ -46,6 +46,10 @@
                         <i class="fas fa-shoe-prints"></i>
                         Shoes
                     </a>
+                    <a class="dropdown-item cl-black" href="/men/accessories">
+                        <i class="fas fa-shoe-prints"></i>
+                        Accessories
+                    </a>
                 </div>
             </li>
             <li class="nav-item dropdown mx-2">
@@ -61,18 +65,69 @@
                         <i class="fas fa-shoe-prints"></i>
                         Shoes
                     </a>
+                    <a class="dropdown-item cl-black" href="/women/accessories">
+                        <i class="fas fa-shoe-prints"></i>
+                        Accessories
+                    </a>
                 </div>
             </li>
-            <li class="nav-item mx-2">
-                <a class="nav-link fs-095 cl-white hover-cl-blue f-w-b t-d-u" href="/child-baby">
-                    Child & Baby
-                </a>
+            <li class="nav-item dropdown mx-2">
+                <span class="nav-link dropdown-toggle t-d-u fs-095 cl-white f-w-b" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Boy's
+                </span>
+                <div class="dropdown-menu fs-09 pt-3 text-muted" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item cl-black mb-1" href="/boy/clothing">
+                        <i class="fas fa-tshirt"></i>
+                        Clothing
+                    </a>
+                    <a class="dropdown-item cl-black" href="/boy/shoes">
+                        <i class="fas fa-shoe-prints"></i>
+                        Shoes
+                    </a>
+                    <a class="dropdown-item cl-black" href="/boy/accessories">
+                        <i class="fas fa-shoe-prints"></i>
+                        Accessories
+                    </a>
+                </div>
               </li>
-            <li class="nav-item mx-2">
-                <a class="nav-link fs-095 cl-white hover-cl-blue f-w-b t-d-u" href="/accessories">
-                    Accessories
-                </a>
-            </li>
+              <li class="nav-item dropdown mx-2">
+                <span class="nav-link dropdown-toggle t-d-u fs-095 cl-white f-w-b" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Girl's
+                </span>
+                <div class="dropdown-menu fs-09 pt-3 text-muted" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item cl-black mb-1" href="/girl/clothing">
+                        <i class="fas fa-tshirt"></i>
+                        Clothing
+                    </a>
+                    <a class="dropdown-item cl-black" href="/girl/shoes">
+                        <i class="fas fa-shoe-prints"></i>
+                        Shoes
+                    </a>
+                    <a class="dropdown-item cl-black" href="/girl/accessories">
+                        <i class="fas fa-shoe-prints"></i>
+                        Accessories
+                    </a>
+                </div>
+              </li>
+              <li class="nav-item dropdown mx-2">
+                <span class="nav-link dropdown-toggle t-d-u fs-095 cl-white f-w-b" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Baby
+                </span>
+                <div class="dropdown-menu fs-09 pt-3 text-muted" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item cl-black mb-1" href="/baby/clothing">
+                        <i class="fas fa-tshirt"></i>
+                        Clothing
+                    </a>
+                    <a class="dropdown-item cl-black" href="/baby/shoes">
+                        <i class="fas fa-shoe-prints"></i>
+                        Shoes
+                    </a>
+                    <a class="dropdown-item cl-black" href="/baby/accessories">
+                        <i class="fas fa-shoe-prints"></i>
+                        Accessories
+                    </a>
+                </div>
+              </li>
             </ul>
 
             <div class="center" id="number_link">
