--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -31,7 +31,7 @@
 
     <!-- form -->
     <section class="center mb-10">
-        <div class="bx-s-10 br-06 bg-white width-48 py-5 px-3 m-w-90">
+        <div class="bx-s-10 br-06 bg-white width-48 py-5 px-3 m-w-90"> 
 
              <!-- message alert -->
              <div class="center">
@@ -55,7 +55,10 @@
                                 <option value="men" class="text-center">men</option>
                                 <option value="women" class="text-center">women</option>
                                 <option value="men-women" class="text-center">men & women</option>
-                                <option value="child-baby" class="text-center">Child & Baby</option>
+                                <option value="boy" class="text-center">boy</option>
+                                <option value="girl" class="text-center">girl</option>
+                                <option value="boy-girl" class="text-center">boy & girl</option>
+                                <option value="baby" class="text-center">baby</option>
                             </select>
                             
                             <div class="text-muted fs-075 ml-3">category selling <span class="text-danger f-w-b">*</span></div>
@@ -169,27 +172,76 @@
             <option value="others" class="text-center">others</option>
             
         </select>
-        <select name="type" id="ta" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3">
+        <select name="type" id="taf" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3">
             <option value="" class="text-center">accessories type</option>
-            <option value="suitcases" class="text-center">suitcases</option>
             <option value="hair" class="text-center">hair</option>
-            <option value="perfumes" class="text-center">perfumes</option>
             <option value="belts" class="text-center">belts</option>
-            <option value="backpacks" class="text-center">backpacks</option>
+            <option value="makeup" class="text-center">makeup</option>
+            <option value="perfumes" class="text-center">perfumes</option>
             <option value="handbags" class="text-center">handbags</option>
-            <option value="childrens-toys" class="text-center">children's toys</option>
+            <option value="headbands" class="text-center">headbands</option>
+            <option value="suitcases" class="text-center">suitcases</option>
+            <option value="backpacks" class="text-center">backpacks</option>
+            <option value="skin-care" class="text-center">Skin Care</option>
+            <option value="hats-caps" class="text-center">hats/caps</option>
             <option value="computer-bags" class="text-center">computer bags</option>
-            <option value="glasses-watches" class="text-center">glasses/watches</option>
-            <option value="bracelets-chains-jewelry" class="text-center">bracelets/chains/jewelry</option>
             <option value="wallets-purses" class="text-center">wallets/purses</option>
+            <option value="childrens-toys" class="text-center">children's toys</option>
+            <option value="gloves-mittens" class="text-center">gloves/mittens</option>
+            <option value="glasses-watches" class="text-center">glasses/watches</option>
+            <option value="playstation-games" class="text-center">playstation/games</option>
+            <option value="bracelets-chains-jewelry" class="text-center">bracelets/chains/jewelry</option>
             <option value="pockets-saddlebags-pencil-cases" class="text-center">pockets/saddlebags/pencil cases</option>
             <option value="others" class="text-center">others</option>
-            
+        </select>
+        <select name="type" id="tah" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3">
+            <option value="" class="text-center">accessories type</option>
+            <option value="hair" class="text-center">hair</option>
+            <option value="belts" class="text-center">belts</option>
+            <option value="perfumes" class="text-center">perfumes</option>
+            <option value="handbags" class="text-center">handbags</option>
+            <option value="suitcases" class="text-center">suitcases</option>
+            <option value="backpacks" class="text-center">backpacks</option>
+            <option value="skin-care" class="text-center">Skin Care</option>
+            <option value="hats-caps" class="text-center">hats/caps</option>
+            <option value="computer-bags" class="text-center">computer bags</option>
+            <option value="wallets-purses" class="text-center">wallets/purses</option>
+            <option value="childrens-toys" class="text-center">children's toys</option>
+            <option value="gloves-mittens" class="text-center">gloves/mittens</option>
+            <option value="glasses-watches" class="text-center">glasses/watches</option>
+            <option value="playstation-games" class="text-center">playstation/games</option>
+            <option value="pockets-saddlebags-pencil-cases" class="text-center">pockets/saddlebags/pencil cases</option>
+            <option value="others" class="text-center">others</option>
+        </select>
+        <select name="type" id="tab" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3">
+            <option value="" class="text-center">accessories type</option>
+            <option value="belts" class="text-center">belts</option>
+            <option value="backpacks" class="text-center">backpacks</option>
+            <option value="hats-caps" class="text-center">hats/caps</option>
+            <option value="childrens-toys" class="text-center">children's toys</option>
+            <option value="gloves-mittens" class="text-center">gloves/mittens</option>
+            <option value="glasses-watches" class="text-center">glasses/watches</option>
+            <option value="playstation-games" class="text-center">playstation/games</option>
+            <option value="others" class="text-center">others</option>
+        </select>
+        <select name="type" id="tag" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3">
+            <option value="" class="text-center">accessories type</option>
+            <option value="belts" class="text-center">belts</option>
+            <option value="makeup" class="text-center">makeup</option>
+            <option value="backpacks" class="text-center">backpacks</option>
+            <option value="hats-caps" class="text-center">hats/caps</option>
+            <option value="childrens-toys" class="text-center">children's toys</option>
+            <option value="gloves-mittens" class="text-center">gloves/mittens</option>
+            <option value="glasses-watches" class="text-center">glasses/watches</option>
+            <option value="playstation-games" class="text-center">playstation/games</option>
+            <option value="bracelets-chains-jewelry" class="text-center">bracelets/chains/jewelry</option>
+            <option value="others" class="text-center">others</option>
         </select>
         <select name="sub_category" id="ss" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3">
             <option value="" class="text-center">sex</option>
             <option value="boy" class="text-center">Boy's</option>
             <option value="girl" class="text-center">Girl's</option>
+            <option value="boy-girl" class="text-center">Boy's & Girl's</option>
         </select>
     </section>
 </body>
