--- a/views/navigation.html
+++ b/views/navigation.html
@@ -47,7 +47,7 @@
                         Shoes
                     </a>
                     <a class="dropdown-item cl-black" href="/men/accessories">
-                        <i class="fas fa-shoe-prints"></i>
+                        <i class="fab fa-shopify"></i>
                         Accessories
                     </a>
                 </div>
@@ -66,7 +66,7 @@
                         Shoes
                     </a>
                     <a class="dropdown-item cl-black" href="/women/accessories">
-                        <i class="fas fa-shoe-prints"></i>
+                        <i class="fab fa-shopify"></i>
                         Accessories
                     </a>
                 </div>
@@ -85,7 +85,7 @@
                         Shoes
                     </a>
                     <a class="dropdown-item cl-black" href="/boy/accessories">
-                        <i class="fas fa-shoe-prints"></i>
+                        <i class="fab fa-shopify"></i>
                         Accessories
                     </a>
                 </div>
@@ -104,7 +104,7 @@
                         Shoes
                     </a>
                     <a class="dropdown-item cl-black" href="/girl/accessories">
-                        <i class="fas fa-shoe-prints"></i>
+                        <i class="fab fa-shopify"></i>
                         Accessories
                     </a>
                 </div>
@@ -123,7 +123,7 @@
                         Shoes
                     </a>
                     <a class="dropdown-item cl-black" href="/baby/accessories">
-                        <i class="fas fa-shoe-prints"></i>
+                        <i class="fab fa-shopify"></i>
                         Accessories
                     </a>
                 </div>
