--- a/views/products.html
+++ b/views/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover a world of fashion at Our store. We offer a carefully curated selection of stylish clothing and footwear for both men and women. From casual to formal, find your perfect look with us.">
+    <meta name="description" content="<%=describe_page%>">
     <link rel="icon" href="/logo/l1.jpg" type="image/jpg">
     <title><%=category%> for <%=gender%></title>
 
