--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -92,7 +92,7 @@
                     </div>
 
                     <div class="text-muted fs-08 mt-3 ml-3">Description<span class="text-danger f-w-b">*</span></div>
-                    <textarea name="description" class="form-control out-n fs-09 ls-05 p-2 w-100 mb-3" placeholder="donner plus d'informations sur votre vente" cols="30" rows="10" required></textarea>
+                    <textarea name="description" class="form-control out-n fs-09 ls-05 p-2 w-100 mb-3" placeholder="donner plus d'informations sur votre vente" cols="30" rows="10"></textarea>
 
                     <div class="center mt-5">
                         <button type="submit" class="fs-095 cl-white br-07 bg-primary py-2 px-3 width-11 bx-s-10">
