--- a/views/products.html
+++ b/views/products.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="<%=describe_page%>">
     <link rel="icon" href="/logo/l1.jpg" type="image/jpg">
-    <title><%=category%> for <%=gender%></title>
+    <title><%=title_page%></title>
 
     <!-- dependant js  -->
     <script defer src="/my-js/sub_categorie_data.js"></script>
