--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -32,7 +32,6 @@
     <!-- form -->
     <section class="center mb-10">
         <div class="bx-s-10 br-06 bg-white width-48 py-5 px-3 m-w-90"> 
-
              <!-- message alert -->
              <div class="center">
                 <div class="mb-3 alert alert-success fs-09 px-3 d-none" message="<%-locals.message%>" id="message_alert">
@@ -186,7 +185,6 @@
             <option value="hats-caps" class="text-center">hats/caps</option>
             <option value="computer-bags" class="text-center">computer bags</option>
             <option value="wallets-purses" class="text-center">wallets/purses</option>
-            <option value="childrens-toys" class="text-center">children's toys</option>
             <option value="gloves-mittens" class="text-center">gloves/mittens</option>
             <option value="glasses-watches" class="text-center">glasses/watches</option>
             <option value="playstation-games" class="text-center">playstation/games</option>
@@ -206,7 +204,6 @@
             <option value="hats-caps" class="text-center">hats/caps</option>
             <option value="computer-bags" class="text-center">computer bags</option>
             <option value="wallets-purses" class="text-center">wallets/purses</option>
-            <option value="childrens-toys" class="text-center">children's toys</option>
             <option value="gloves-mittens" class="text-center">gloves/mittens</option>
             <option value="glasses-watches" class="text-center">glasses/watches</option>
             <option value="playstation-games" class="text-center">playstation/games</option>
@@ -236,6 +233,25 @@
             <option value="playstation-games" class="text-center">playstation/games</option>
             <option value="bracelets-chains-jewelry" class="text-center">bracelets/chains/jewelry</option>
             <option value="others" class="text-center">others</option>
+        </select>
+        <select name="type" id="ta_baby" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3">
+            <option value="" class="text-center">accessories type</option>
+            <option value="safety" class="text-center">safety</option>
+            <option value="bottles" class="text-center">bottles</option>
+            <option value="monitors" class="text-center">Monitors</option>
+            <option value="diapering" class="text-center">Diapering</option>
+            <option value="baby-care" class="text-center">Baby care</option>
+            <option value="car-seats" class="text-center">Car seats</option>
+            <option value="baby-toys" class="text-center">Baby toys</option>
+            <option value="baby-wipes" class="text-center">Baby wipes</option>
+            <option value="beds-cribs" class="text-center">Beds/Cribs</option>
+            <option value="diaper-bags" class="text-center">Diaper bags</option>
+            <option value="bibs-diapers" class="text-center">Bibs/Diapers</option>
+            <option value="baby-bathtubs" class="text-center">Baby bathtubs</option>
+            <option value="baby-blankets" class="text-center">Baby blankets</option>
+            <option value="strollers-prams" class="text-center">Strollers/Prams</option>
+            <option value="teats-pacifiers" class="text-center">Teats/Pacifiers</option>
+            <option value="Others" class="text-center">Others</option>
         </select>
         <select name="sub_category" id="ss" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3">
             <option value="" class="text-center">sex</option>
