--- a/views/products.html
+++ b/views/products.html
@@ -52,7 +52,7 @@
             <div class="mr-4 mr-lg-5">
                 <div class="wrap">
 
-                    <%if(gender == 'men' || gender == 'women' || gender == 'boy' || gender == 'girl'){%>
+                    <%if(gender == 'men' || gender == 'women' || gender == 'boy' || gender == 'girl' || (gender=='baby' && category=='accessories')){%>
                         <select name="type" id="st" class="mr-2 width-8 text-center f-w-b br-06 fs-075 cs-p text-muted mb-2" style="height: 1.5rem; border: 2.5px solid black;">
                             <!-- display type from js here -->
                         </select>
