--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -117,7 +117,7 @@
             <option value="" class="text-center">clothing type</option>
             <option value="suit" class="text-center">suit</option>
             <option value="shirt" class="text-center">shirt</option>
-            <option value="tanks" class="text-center">tanks</option>
+            <option value="tank-top" class="text-center">tank top</option>
             <option value="shorts" class="text-center">shorts</option>
             <option value="pants" class="text-center">pants</option>
             <option value="jeans" class="text-center">jeans</option>
@@ -131,10 +131,12 @@
         </select>
         <select name="type" id="tch" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3" required>
             <option value="" class="text-center">shoes type</option>
-            <option value="sports-shoes" class="text-center">sports shoes</option>
+            <option value="cleags" class="text-center">Cleags</option>
+            <option value="crocs-clogs" class="text-center">Crocs/Clogs</option>
             <option value="boots-ankle-boots" class="text-center">boots/ankle boots</option>
             <option value="traditional-african" class="text-center">traditional African</option>
-            <option value="loafers-oxfords-derbies" class="text-center">loafers/oxfords/derbies</option>
+            <option value="athletic-shoes-sneakers" class="text-center">Athletic Shoes/Sneakers</option>
+            <option value="loafers-oxfords-derbies-mocassins" class="text-center">loafers/oxfords/derbies/mocassins</option>
             <option value="sandals-open-toe-shoes-slippers-espadrilles" class="text-center">sandals/open-toe shoes/slippers/espadrilles</option>
             <option value="others" class="text-center">others</option>            
         </select>
@@ -162,11 +164,12 @@
         </select>
         <select name="type" id="tcf" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3" required>
             <option value="" class="text-center">shoes type</option>
-            <option value="sports-shoes" class="text-center">sports shoes</option>
+            <option value="crocs-clogs" class="text-center">Crocs/Clogs</option>
             <option value="boots-ankle-boots" class="text-center">boots/ankle boots</option>
-            <option value="traditional-african" class="text-center">traditional African</option>
             <option value="flats-heels-pumps" class="text-center">flats/heels/pumps</option>
-            <option value="loafers-oxfords-derbies" class="text-center">loafers/oxfords/derbies</option>
+            <option value="traditional-african" class="text-center">traditional African</option>
+            <option value="athletic-shoes-sneakers" class="text-center">Athletic Shoes/Sneakers</option>
+            <option value="loafers-oxfords-derbies-mocassins" class="text-center">loafers/oxfords/derbies/mocassins</option>
             <option value="sandals-open-toe-shoes-slippers-espadrilles" class="text-center">sandals/open-toe shoes/slippers/espadrilles</option>
             <option value="others" class="text-center">others</option>
             
@@ -236,6 +239,7 @@
         </select>
         <select name="type" id="ta_baby" class="height-input form-control width-20 fs-075 rounded p-1 mb-2 mt-3">
             <option value="" class="text-center">accessories type</option>
+            <option value="bibs" class="text-center">Bibs</option>
             <option value="safety" class="text-center">safety</option>
             <option value="bottles" class="text-center">bottles</option>
             <option value="monitors" class="text-center">Monitors</option>
@@ -246,7 +250,6 @@
             <option value="baby-wipes" class="text-center">Baby wipes</option>
             <option value="beds-cribs" class="text-center">Beds/Cribs</option>
             <option value="diaper-bags" class="text-center">Diaper bags</option>
-            <option value="bibs-diapers" class="text-center">Bibs/Diapers</option>
             <option value="baby-bathtubs" class="text-center">Baby bathtubs</option>
             <option value="baby-blankets" class="text-center">Baby blankets</option>
             <option value="strollers-prams" class="text-center">Strollers/Prams</option>
