--- a/views/accueil.html
+++ b/views/accueil.html
@@ -66,7 +66,9 @@
                                             <%=product.price%> $
                                         </span>
                                     <%}else{%>
-                                        <span class="bg-black py-2 px-4 rounded bx-s-6 text-white fs-075">price depending size</span>
+                                        <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black">
+                                            <i class="fas fa-eye"></i>
+                                        </span>
                                     <%}%>
                                 </h5>
                             </a>
@@ -110,7 +112,9 @@
                                             <%=product.price%> $
                                         </span>
                                     <%}else{%>
-                                            <span class="bg-orange-woman py-2 px-4 rounded bx-s-6 text-white fs-075">price depending size</span>
+                                        <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-orange-woman">
+                                            <i class="fas fa-eye"></i>
+                                        </span>
                                     <%}%>
                                 </h5>
                             </a>
