--- a/views/details_produit.html
+++ b/views/details_produit.html
@@ -175,11 +175,11 @@
                        <div class="center mb-3">
                             <img src="<%=product.url_img%>" class="img_si rounded height-12" alt="<%=product.title%>" style="max-width: 100% !important;">
                        </div>
-                        <h5 class="text-center f-w-b fs-085 cl-purple text-shadow-1">
+                        <h5 class="text-center fs-12 cl-purple text-shadow-1">
                             <%if(product.price){%>
                                 <%=product.price%> $
                             <%}else{%>
-                                Price depending size
+                                <i class="fas fa-eye fs-12"></i>
                             <%}%>
                         </h5>
                     </a>
